RESOLVED FIXED257901
[WGSL] size and align attributes should not generate code
https://bugs.webkit.org/show_bug.cgi?id=257901
Summary [WGSL] size and align attributes should not generate code
Tadeu Zagallo
Reported 2023-06-09 11:44:37 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-09 11:44:50 PDT
Tadeu Zagallo
Comment 2 2023-06-09 11:47:36 PDT
EWS
Comment 3 2023-06-13 00:36:16 PDT
Committed 265110@main (88ce5a356730): <https://commits.webkit.org/265110@main> Reviewed commits have been landed. Closing PR #14819 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.