[WGSL] size and align attributes should not generate code https://bugs.webkit.org/show_bug.cgi?id=257901 rdar://110539602

Reviewed by Dan Glastonbury.

The default visitor would cause the value of those attributes to be printed,
which result in invalid metal code. To fix it we simply have to override the
visitor with a no-op implementation.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/265110@main